chore: capitalized component name, padding fixed on mobile

--- a/src/components/Carousel/carousel.module.scss
+++ b/src/components/Carousel/carousel.module.scss
@@ -19,4 +19,8 @@
   -webkit-overflow-scrolling: touch;
   white-space: nowrap;
   padding: 3.5rem 40px 10rem;
+
+  @include responds-to("sm", "max") {
+    padding: 0rem 1rem 10rem;
+  }
 }
